--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "chart.js": "^2.9.4",
     "chartjs-plugin-datalabels": "^0.7.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "firebase": "^8.2.1",
+    "firebase-admin": "^9.4.2",
+    "influx": "^5.6.3",
     "jquery": "^3.5.1",
     "jquery-circle-progress": "^1.2.2",
+    "mqtt": "^4.2.6",
     "vue": "^2.6.11"
   },
   "devDependencies": {
