--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
+    "firebase-tools": "^9.1.0",
     "influx": "^5.6.3",
     "jquery": "^3.5.1",
     "jquery-circle-progress": "^1.2.2",
